[tool.poetry]
name = "integral-lvk"
version = "0.1.0"
description = ""
authors = ["Volodymyr Savchenko <Volodymyr.Savchenko@epfl.ch>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
